k8Configs/ingress/resource/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
  labels:
    name: myingress
spec:
  rules:
    - host: <Host>
      http:
        paths:
          - path: "/wear"
            backend:
              service:
                name: wear-service
                port:
                  number: 80
          - path: "/watch"
            backend:
              service:
                name: wear-service
                port:
                  number: 80
